--- a/app/components/TransactionsTable/TransactionsTable.module.scss
+++ b/app/components/TransactionsTable/TransactionsTable.module.scss
@@ -1,3 +1,17 @@
-.pending_change {
-	background-color: orange;
+.transaction_table {
+	input,
+	select {
+		padding: 5px;
+		width: 100%;
+		height: 100%;
+		border: none;
+		outline: none;
+		&:focus,
+		&:hover {
+			background-color: antiquewhite;
+		}
+		&.pending_change {
+			background-color: orange;
+		}
+	}
 }
